tests/negative/syntax/missing_semicolon.stream
// EXPECT: Syntax Error
let a = 10
print(a);